--- a/Cadastro.html
+++ b/Cadastro.html
@@ -13,11 +13,11 @@
         <section>
             <form action="">
                 <label for="Nome">Nome</label>
-                <input type="text" id="Nome"> <br>
+                <input type="text" id="Nome" required="true"> <br>
                 <label for="Email">E-mail</label>
-                <input type="email" id="Email"> <br>
+                <input type="email" id="Email" required="true"> <br>
                 <label for="Senha">Senha</label>
-                <input type="text" id="Senha"> <br>
+                <input type="text" id="Senha" required="true"> <br>
                 <button>Cadastrar</button>
             </form>
         </section>
