--- a/Cadastro.html
+++ b/Cadastro.html
@@ -17,8 +17,8 @@
                 <label for="Email">E-mail</label>
                 <input type="email" id="Email" required="true"> <br>
                 <label for="Senha">Senha</label>
-                <input type="text" id="Senha" required="true"> <br>
-                <button>Cadastrar</button>
+                <input type="password" id="Senha" required="true"> <br>
+                <input type="submit" value="Cadastrar">
             </form>
         </section>
     </main>
